refactor: replace repair types/employee with item-based model (materials + labor)
- Add RepairItem entity with itemType (MATERIAL/MANO_DE_OBRA), description, amount, and per-item document linking
- Add RepairItemType enum, RepairItemDTO, RepairItemResponseDTO, RepairItemRepository
- Remove cost, employee, repairTypes, transactionalDocument, documentSortOrder from Repair entity
- Add mileage field to Repair entity
- Calculate materialSubtotal, laborSubtotal, totalCost in RepairMapper (not persisted)
- Rewrite RepairRepository JPQL with LEFT JOIN items and subquery-based cost filters
- Update RepairService to manage items with applyItems() method
- Update RepairController with new filter params (itemDescription, minMileage, maxMileage)
- Update RepairOrderService to build RepairItems from order completion
- Update DocumentTotalRecalculator and TransactionalDocumentService for per-item document linking
- Update ReportService to calculate totals from items
- Delete unused RepairType enum
- Add V54 migration with data migration from old columns to items table